--- a/api/package.json
+++ b/api/package.json
@@ -20,17 +20,21 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/pg-format": "^1.0.5",
     "eslint": "^9.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/pg": "^8.11.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mariadb": "^3.3.0",
     "mysql2": "^3.9.4",
     "pg": "^8.11.5",
+    "pg-format": "^1.0.4",
     "reflect-metadata": "^0.2.2"
   }
 }
