--- a/api/package.json
+++ b/api/package.json
@@ -18,23 +18,23 @@
   },
   "homepage": "https://github.com/N0og/Plataforma_Apoio#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/pg": "^8.11.5",
     "@types/pg-format": "^1.0.5",
     "eslint": "^9.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/pg": "^8.11.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "excel4node": "^1.8.2",
     "express": "^4.19.2",
     "mariadb": "^3.3.0",
     "mysql2": "^3.9.4",
     "pg": "^8.11.5",
-    "pg-format": "^1.0.4",
     "reflect-metadata": "^0.2.2"
   }
 }
