Adição de BD_API; Add Conexão dinâmica - CEN 5 e 6; Mod Relatórios.
Relatórios Modificados:

Completude --> Unificação com o Antigo Relatório de CPF e Atualização;
ProdutividadeUBS --> Adição de Vacinas e Correções;

Tratamento para os EndPoints (Apenas clientes válidos).

--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "amqplib": "^0.10.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "excel4node": "^1.8.2",
@@ -35,6 +36,7 @@
     "mariadb": "^3.3.0",
     "mysql2": "^3.9.4",
     "pg": "^8.11.5",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20"
   }
 }
