--- a/api/.env-example
+++ b/api/.env-example
@@ -2,6 +2,13 @@
 API_PORT = 8080
 FRONT_END_ADDRESS = localhost
 
+#DB_API
+APIDBHOST = localhost
+APIDBUSER = postgres
+APIDBNAME = db_name
+APIDBPASSWORD = db_password
+APIDBPORT = 5433
+
 #PostgreSQL
 PGDBHOST = localhost
 PGDBUSER = postgres
