Correções e Implementações na API V1; Implementação de aplicação Front-End no projeto.
API:
- Add: Novos Campos em Entidade Municipio;
- Mod: /Config JSON´s;
- Add: FiltersController (Para Front);
- Add: MapController (Nova entrega);
- Add: Novas Rotas para os Controllers Filters e Map;
- Updt: UpdateDBService, para novo modelo dos /Config JSON´s;
- Fix: ConfigPostgresDatabase, propriedade database faltava o = "esus"

Versão estável - OBS: Code Review ainda não realizado.

FRONT:

- Implementação de projeto React+Vite;
- Arquitetura: SPA.

Em construção... Versão conceitual.

--- a/api/src/config/json/eas.json.example
+++ b/api/src/config/json/eas.json.example
@@ -2,6 +2,10 @@
   "ESTADO": {
     "MUNICIPIO": {
       "IBGE": "0000000",
+      "IVS": "3",
+      "POP_IBGE": POPULAÇÃO SEGUNDO O IBGE,
+      "PORT_IBGE": EX: "3 - Acima de 50mil até 100mil hab.",
+      "IED": EX: "3",
       "CREDENCIAIS": {
         "user": "name",
         "password": "pwd"
@@ -11,6 +15,9 @@
     ,
     "MUNICIPIO2": {
       "IBGE": "0000000",
+      "POP_IBGE": POPULAÇÃO SEGUNDO O IBGE,
+      "PORT_IBGE": EX: "3 - Acima de 50mil até 100mil hab.",
+      "IED": EX: "3",
       "CREDENCIAIS": {
         "user": "name",
         "password": "pwd"
@@ -22,6 +29,9 @@
   "ESTADO2": {
     "MUNICIPIO": {
       "IBGE": "0000000",
+      "POP_IBGE": POPULAÇÃO SEGUNDO O IBGE,
+      "PORT_IBGE": EX: "3 - Acima de 50mil até 100mil hab.",
+      "IED": EX: "3",
       "CREDENCIAIS": {
         "user": "name",
         "password": "pwd"
@@ -31,6 +41,9 @@
     ,
     "MUNICIPIO2": {
       "IBGE": "0000000",
+      "POP_IBGE": POPULAÇÃO SEGUNDO O IBGE,
+      "PORT_IBGE": EX: "3 - Acima de 50mil até 100mil hab.",
+      "IED": EX: "3",
       "CREDENCIAIS": {
         "user": "name",
         "password": "pwd"
