--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,8 @@
     "amqplib": "^0.10.4",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "excel4node": "^1.8.2",
     "express": "^4.19.2",
