Melhorias na API - Front;
Mudança em:
API -
Arquitetura (Leves alterações/correções);
Controllers (Melhorias significativas);
Services (Melhorias significativas);

FRONT -
Uso de Hooks Customizados;
Componetização adequada;
Melhorias e Correções;

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 #API
 api/.env
 api/node_modules
+api/src/config/json/whitelist.json
+api/src/config/json/esus.json
+api/src/config/json/eas.json
 
 
 #FRONT
