--- a/apoio_client/package.json
+++ b/apoio_client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
@@ -20,12 +21,14 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
     "@types/leaflet": "^1.9.12",
+    "@types/node": "^20.14.11",
     "@types/react": "^18.2.66",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.22",
