--- a/apoio_client/package.json
+++ b/apoio_client/package.json
@@ -12,17 +12,22 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
-    "styled-components": "^6.1.11"
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.12",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
