--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ api/.vscode/launch.json
 
 
 #FRONT
+apoio_client/dist
 apoio_client/node_modules
 apoio_client/.vscode/launch.json
 apoio_client/.env.development
