--- a/api/.env-example
+++ b/api/.env-example
@@ -8,3 +8,8 @@ APIDBNAME = db_name
 APIDBPASSWORD = db_password
 APIDBPORT = 5433
 
+#MariaDB
+MDBHOST = localhost
+MDBUSER = root
+MDBPASSWORD = db_password
+MDBPORT = 3306
