--- a/api/.env-example
+++ b/api/.env-example
@@ -1,5 +1,9 @@
 #API
 API_PORT = 8080
+JWT_SECRET = SECRET
+JWT_EXPIRATION = 1000
+JWT_REFRESH_SECRET =  SECRET
+JWT_REFRESH_EXPIRATION = 1000
 
 #DB_API
 APIDBHOST = localhost
