--- a/api/package.json
+++ b/api/package.json
@@ -30,14 +30,19 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "amqplib": "^0.10.4",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "excel4node": "^1.8.2",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "mariadb": "^3.3.0",
     "mysql2": "^3.9.4",
