--- a/api/package.json
+++ b/api/package.json
@@ -41,12 +41,14 @@
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "excel4node": "^1.8.2",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "mariadb": "^3.3.0",
     "mysql2": "^3.9.4",
     "pg": "^8.11.5",
+    "pm2": "^5.4.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
   }
